<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>number_publisher</name>
  <version>1.0.0</version>

  <description>A simple ROS2 C++ package that publishes the sum of two integers loaded from a YAML file</description>
  <license>Apache License 2.0</license>

  <author email="vahidbehtaji2013@gmail.com">Your Name</author>
  <maintainer email="vahidbehtaji2013@gmail.com">Your Name</maintainer>

  <url type="website">https://github.com/yourusername/number_publisher</url>
  <url type="repository">https://github.com/yourusername/number_publisher</url>
  <url type="bugtracker">https://github.com/yourusername/number_publisher/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 